python/testData/quickFixes/PyTypeHintsQuickFixTest/multipleElementListAsTypingMemberParameter.py
from typing import List

foo4: List[<error descr="Parameters to generic types must be types">[int,<caret> str]</error>]